--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,13 @@ jobs:
       - name: Deploy application
         run: |
           echo "Deploying application..."
+
+          rm -rf /home/azureuser/htdocs/photogram
+          mkdir -p /home/azureuser/htdocs/photogram
+
+          cp -r /home/azureuser/actions-runner/_work/__photogram/__photogram/* \
+                /home/azureuser/htdocs/photogram/
+
+          rm -rf /home/azureuser/htdocs/photogram/.git
+
           echo "Application successfully deployed."
-          ls /var/www
