--- a/project/sampleconfig.json
+++ b/project/sampleconfig.json
@@ -1,6 +1,6 @@
 {
     "db_server": "db_server",
-    "db_username": "Restdb_usernameart",
+    "db_username": "db_username",
     "db_password": "db_password",
     "db_name": "db_name",
     "base_path": "PASTE THE WORKING PATH HERE"
