testing cp for photogram.json

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,6 @@ jobs:
           rm -rf /home/azureuser/htdocs/photogram/.git
 
           echo "Application successfully deployed."
+
+          cp /home/azureuser/photogramconfig.json /home/azureuser/htdocs/photogram/project/
+
