--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,3 +1,9 @@
+<IfModule mod_headers.c>
+<FilesMatch "\.(ico|pdf|jpg|jpeg|png|webp|gif|html|htm|xml|txt|xsl|css)$">
+    Header set Cache-Control "max-age=31536050"
+</FilesMatch>
+</IfModule>
+
 ErrorDocument 404 /error.php
 ErrorDocument 500 "<H1>Some error, contact administrator</H1>"
 
@@ -5,6 +11,9 @@ RewriteEngine On
 RewriteBase /
 
 RewriteRule ^/?files/([^/]+)?$ files.php?name=$1 [L,QSA,NC]
+
+RewriteRule ^/?api/([^/]+)?$ api.php?rquest=$1 [L,QSA,NC]
+RewriteRule ^/?api/([^/]+)/(.+)?$ api.php?rquest=$2&namespace=$1 [L,QSA,NC]
 
 RewriteCond %{REQUEST_FILENAME}\.php -f
 RewriteRule ^([^/.]+)$ $1.php [L]
