--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,20 @@ jobs:
 
           cp -r "$(pwd)"/* /home/azureuser/htdocs/photogram/
 
+          # Clean up unnecessary files/folders
           rm -rf /home/azureuser/htdocs/photogram/.git
-          rm -rf /home/azureuser/htdocs/photogram/htdocs/.gitignore
           rm -rf /home/azureuser/htdocs/photogram/README.md
-          rm -rf /home/azureuser/htdocs/photogram/htdocs/.gitattributes
+          rm -rf /home/azureuser/htdocs/photogram/.github
+          rm -rf /home/azureuser/htdocs/photogram/project/npm-scripts
+          rm -rf /home/azureuser/htdocs/photogram/project/js
+          rm -rf /home/azureuser/htdocs/photogram/project/css
           rm -rf /home/azureuser/htdocs/photogram/project/sampleconfig.json
-          cp /home/azureuser/photogramconfig.json /home/azureuser/htdocs/photogram/project/
+          rm -rf /home/azureuser/htdocs/photogram/.vscode
+          rm -f /home/azureuser/htdocs/photogram/composer.json
+          rm -f /home/azureuser/htdocs/photogram/htdocs/.gitignore
+          rm -f /home/azureuser/htdocs/photogram/htdocs/.gitattributes
+
+          # Copy production config if it exists
+          cp /home/azureuser/photogramconfig.json /home/azureuser/htdocs/photogram/project/ 2>/dev/null || true
 
           echo "Application successfully deployed."
-
